--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                             <input type="text" placeholder="Add calories" id="item-calories">
                             <label for="item-calories">Calories</label>
                         </div>
+                        <button class="add-btn btn blue darken-3"><i class="fa fa-plus"></i>Add Meal</button>
                     </div>
                 </form>
             </div>
