--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                         </div>
                         <button class="add-btn btn blue darken-3"><i class="fa fa-plus"></i>Add Meal</button>
                         <button class="update-btn btn orange"><i class="fa fa-pencil-square-o"></i>Update Meal</button>
+                        <button class="delete-btn btn red"><i class="fa fa-remove"></i>Delete Meal</button>
                     </div>
                 </form>
             </div>
