commented for each section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- Navbar -->
     <nav>
         <div class="nav-wrapper blue">
             <div class="container">
@@ -26,6 +27,7 @@
     <br>
 
     <div class="container">
+        <!-- Form Card -->
         <div class="card">
             <div class="card-content">
                 <span class="card-title">Add Meal / Food Item</span>
@@ -49,6 +51,8 @@
                 </form>
             </div>
         </div>
+        <!-- Calorie Count -->
+
     </div>
 
 
