--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             </div>
         </div>
         <!-- Calorie Count -->
+        <h3 class="center-align">Total Calories: <span class="total-calories">0</span></h3>
 
     </div>
 
