--- a/index.html
+++ b/index.html
@@ -54,6 +54,22 @@
         <!-- Calorie Count -->
         <h3 class="center-align">Total Calories: <span class="total-calories">0</span></h3>
 
+        <!-- Item List -->
+        <ul id="item-list" class="collection">
+            <li class="collection-item" id="item-0">
+                <strong>Bread with Jam: </strong> <em>270 Calories</em>
+                <a href="" class="secondary-content"><i class="fa fa-pencil"></i></a>
+            </li>
+            <li class="collection-item" id="item-0">
+                <strong>Meatball Pasta: </strong> <em>800 Calories</em>
+                <a href="" class="secondary-content"><i class="fa fa-pencil"></i></a>
+            </li>
+            <li class="collection-item" id="item-0">
+                <strong>Chocolate Protein shake: </strong> <em>100 Calories</em>
+                <a href="" class="secondary-content"><i class="fa fa-pencil"></i></a>
+            </li>
+        </ul>
+
     </div>
 
 
