--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
             <!--
             <li class="collection-item" id="item-0">
                 <strong>Bread with Jam: </strong> <em>270 Calories</em>
-                <a href="" class="secondary-content"><i class="fa fa-pencil"></i></a>
+                <a href="" class="secondary-content"><i class="edit-item fa fa-pencil"></i></a>
             </li>
             <li class="collection-item" id="item-0">
                 <strong>Meatball Pasta: </strong> <em>800 Calories</em>
-                <a href="" class="secondary-content"><i class="fa fa-pencil"></i></a>
+                <a href="" class="secondary-content"><i class="edit-item fa fa-pencil"></i></a>
             </li>
             <li class="collection-item" id="item-0">
                 <strong>Chocolate Protein shake: </strong> <em>100 Calories</em>
-                <a href="" class="secondary-content"><i class="fa fa-pencil"></i></a>
+                <a href="" class="secondary-content"><i class="edit-item fa fa-pencil"></i></a>
             </li>
             -->
         </ul>
